--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ RPC_URL=https://lb.drpc.live/bsc/Ahc3I-33qkfGuwXSahR3XfMHZiZ_sBMR8Lq_QrxF2MGT
 REDIS_URL=redis://default:dDNaLWNZNYxRUQnBqBqqxTKSZCipKrIq@shortline.proxy.rlwy.net:59603
 POSTGRES_URL=postgresql://postgres:BNZBLlmabnlgGrrQZogYUVQhDqFLRvuA@turntable.proxy.rlwy.net:53166/railway
 RPC_WS_URL=wss://lb.drpc.live/bsc/Ahc3I-33qkfGuwXSahR3XfMHZiZ_sBMR8Lq_QrxF2MGT
+
+# 日誌配置
+LOG_LEVEL=error  # 只顯示錯誤和重要信息
+ENABLE_DEBUG_LOGS=false
+ENABLE_PERFORMANCE_LOGS=false
+ENABLE_VERBOSE_LOGS=false
